--- a/ui/index.html
+++ b/ui/index.html
@@ -569,6 +569,7 @@
 				headers: { 'Content-Type': 'application/json' },
 				data: JSON.stringify({
 					OrderID: "",
+					uasID: "",
 					startTime: "",
 					endTime: ""
 				}),
