优化 - 信息面板优化显示

--- a/ui/index.html
+++ b/ui/index.html
@@ -131,7 +131,8 @@
 					<!-- 新增：无人机信息三面板 -->
 					<div class="drone-info-panels">
 						<div class="drone-info-panel" id="panel-id-date">
-							<p>UasID: <span id="panel-uav-id">--</span></p>
+							<p>架次编号: <span id="panel-orderID">--</span></p>
+							<p>UasID: <span id="panel-uasID">--</span></p>
 							<p>日期: <span id="panel-date">--</span></p>
 						</div>
 						<div class="drone-info-panel" id="panel-battery-payload">
@@ -190,7 +191,7 @@
                     </div>
                 </div>
             </div>
-			<div class="visual_box">
+			<div class="visual_box" style="height: 50%;">
 				<div class="visual_title">
 					<span>飞行记录</span>
 					<img src="images/ksh33.png">
