修改 - 信息面板添加票数信息

--- a/ui/index.html
+++ b/ui/index.html
@@ -137,6 +137,7 @@
 						</div>
 						<div class="drone-info-panel" id="panel-battery-payload">
 							<p>电量: <span id="panel-soc">--</span></p>
+							<p>票数: <span id="panel-expressCount">--</span></p>
 							<p>载货量: <span id="panel-payload">--</span></p>
 						</div>
 						<div class="drone-info-panel" id="panel-wind">
